--- a/.config
+++ b/.config
@@ -475,6 +475,7 @@ CONFIG_FEATURE_drawing-backend_libX11=y
 #
 CONFIG_PACKAGE_base-files=y
 CONFIG_PACKAGE_block-mount=y
+# CONFIG_PACKAGE_bridge is not set
 CONFIG_PACKAGE_busybox=y
 CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_BUSYBOX_DEFAULT_HAVE_DOT_CONFIG=y
@@ -2344,6 +2345,10 @@ CONFIG_PACKAGE_valgrind-massif=m
 CONFIG_PACKAGE_valgrind-vgdb=m
 
 #
+# Extra packages
+#
+
+#
 # Firmware
 #
 # CONFIG_PACKAGE_r8169-firmware is not set
@@ -3567,6 +3572,7 @@ CONFIG_PACKAGE_liblo=m
 #
 # CONFIG_PACKAGE_bcg729 is not set
 # CONFIG_PACKAGE_dahdi-tools-libtonezone is not set
+CONFIG_PACKAGE_libiksemel=m
 # CONFIG_PACKAGE_libortp is not set
 # CONFIG_PACKAGE_libosip2 is not set
 # CONFIG_PACKAGE_libpj is not set
@@ -3715,19 +3721,19 @@ CONFIG_PACKAGE_libdbi=m
 # CONFIG_PACKAGE_libdbd-mysql is not set
 # CONFIG_PACKAGE_libdbd-pgsql is not set
 # CONFIG_PACKAGE_libdbd-sqlite3 is not set
+CONFIG_PACKAGE_libdbus=y
+CONFIG_PACKAGE_libdbus-glib=m
 # CONFIG_PACKAGE_libdmapsharing is not set
 CONFIG_PACKAGE_libdnet=m
 CONFIG_PACKAGE_libelf1=y
 CONFIG_PACKAGE_libasm=m
-CONFIG_PACKAGE_libdbus=y
-CONFIG_PACKAGE_libdbus-glib=m
 CONFIG_PACKAGE_libdevmapper=m
 CONFIG_PACKAGE_libdw=m
 # CONFIG_PACKAGE_libesmtp is not set
 # CONFIG_PACKAGE_libev is not set
 CONFIG_PACKAGE_libevent=m
 CONFIG_PACKAGE_libevent2=m
-# CONFIG_PACKAGE_libevent2-core is not set
+CONFIG_PACKAGE_libevent2-core=m
 # CONFIG_PACKAGE_libevent2-extra is not set
 CONFIG_PACKAGE_libevent2-openssl=m
 # CONFIG_PACKAGE_libevent2-pthreads is not set
@@ -3843,6 +3849,7 @@ CONFIG_PACKAGE_libpcsclite=m
 # CONFIG_PACKAGE_libplistcxx is not set
 CONFIG_PACKAGE_libpng=y
 CONFIG_PACKAGE_libpopt=m
+# CONFIG_PACKAGE_libpri is not set
 CONFIG_PACKAGE_libprotobuf-c=m
 # CONFIG_PACKAGE_libqrencode is not set
 # CONFIG_PACKAGE_libradcli is not set
@@ -3853,6 +3860,7 @@ CONFIG_PACKAGE_librrd1=m
 # CONFIG_PACKAGE_librtlsdr is not set
 CONFIG_PACKAGE_libruby=m
 CONFIG_PACKAGE_libsamplerate=m
+# CONFIG_PACKAGE_libsane is not set
 CONFIG_PACKAGE_libsasl2=m
 # CONFIG_PACKAGE_libsearpc is not set
 # CONFIG_PACKAGE_libseccomp is not set
@@ -3911,6 +3919,7 @@ CONFIG_PACKAGE_libwrap=m
 # CONFIG_PACKAGE_libxerces-c-samples is not set
 CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libxslt=m
+# CONFIG_PACKAGE_libyang is not set
 # CONFIG_PACKAGE_libzdb is not set
 # CONFIG_PACKAGE_libzmq-curve is not set
 # CONFIG_PACKAGE_libzmq-nc is not set
@@ -5182,6 +5191,7 @@ CONFIG_PACKAGE_birdc6=m
 # CONFIG_PACKAGE_birdcl4 is not set
 # CONFIG_PACKAGE_birdcl6 is not set
 # CONFIG_PACKAGE_bmx6 is not set
+# CONFIG_PACKAGE_bmx7 is not set
 # CONFIG_PACKAGE_cjdns is not set
 CONFIG_PACKAGE_genl=m
 CONFIG_PACKAGE_igmpproxy=m
@@ -5313,6 +5323,7 @@ CONFIG_PACKAGE_asterisk18=m
 CONFIG_PACKAGE_asterisk18-app-authenticate=m
 # CONFIG_PACKAGE_asterisk18-app-chanisavail is not set
 # CONFIG_PACKAGE_asterisk18-app-chanspy is not set
+# CONFIG_PACKAGE_asterisk18-app-dahdiras is not set
 # CONFIG_PACKAGE_asterisk18-app-directed_pickup is not set
 CONFIG_PACKAGE_asterisk18-app-disa=m
 # CONFIG_PACKAGE_asterisk18-app-exec is not set
@@ -5336,6 +5347,8 @@ CONFIG_PACKAGE_asterisk18-app-system=m
 # CONFIG_PACKAGE_asterisk18-cdr is not set
 # CONFIG_PACKAGE_asterisk18-cdr-csv is not set
 # CONFIG_PACKAGE_asterisk18-chan-agent is not set
+# CONFIG_PACKAGE_asterisk18-chan-dahdi is not set
+CONFIG_PACKAGE_asterisk18-chan-gtalk=m
 # CONFIG_PACKAGE_asterisk18-chan-iax2 is not set
 CONFIG_PACKAGE_asterisk18-chan-local=m
 # CONFIG_PACKAGE_asterisk18-chan-mgcp is not set
@@ -5344,6 +5357,7 @@ CONFIG_PACKAGE_asterisk18-chan-local=m
 # CONFIG_PACKAGE_asterisk18-chan-skinny is not set
 CONFIG_PACKAGE_asterisk18-codec-a-mu=m
 CONFIG_PACKAGE_asterisk18-codec-alaw=m
+# CONFIG_PACKAGE_asterisk18-codec-dahdi is not set
 # CONFIG_PACKAGE_asterisk18-codec-g722 is not set
 # CONFIG_PACKAGE_asterisk18-codec-g726 is not set
 # CONFIG_PACKAGE_asterisk18-codec-g729 is not set
@@ -5387,6 +5401,7 @@ CONFIG_PACKAGE_asterisk18-res-crypto=m
 # CONFIG_PACKAGE_asterisk18-res-pktccops is not set
 # CONFIG_PACKAGE_asterisk18-res-smdi is not set
 # CONFIG_PACKAGE_asterisk18-res-srtp is not set
+# CONFIG_PACKAGE_asterisk18-res-timing-dahdi is not set
 # CONFIG_PACKAGE_asterisk18-res-timing-pthread is not set
 # CONFIG_PACKAGE_asterisk18-res-timing-timerfd is not set
 # CONFIG_PACKAGE_asterisk18-sounds is not set
@@ -5431,6 +5446,7 @@ CONFIG_PACKAGE_openvpn-easy-rsa=m
 # CONFIG_PACKAGE_openvpn-nossl is not set
 # CONFIG_PACKAGE_openvpn-openssl is not set
 # CONFIG_PACKAGE_openvpn-polarssl is not set
+# CONFIG_PACKAGE_pptpd is not set
 CONFIG_PACKAGE_strongswan=m
 
 #
@@ -5667,6 +5683,7 @@ CONFIG_PACKAGE_memcached=m
 # CONFIG_PACKAGE_minimalist-pcproxy is not set
 CONFIG_PACKAGE_mosquitto=m
 CONFIG_MOSQUITTO_LWS=y
+CONFIG_MOSQUITTO_PASSWD=y
 CONFIG_PACKAGE_mosquitto-client=m
 # CONFIG_PACKAGE_mosquitto-client-nossl is not set
 # CONFIG_PACKAGE_mosquitto-nossl is not set
@@ -5951,6 +5968,8 @@ CONFIG_PACKAGE_alsa-utils=m
 CONFIG_PACKAGE_alsa-utils-seq=m
 CONFIG_PACKAGE_alsa-utils-tests=m
 CONFIG_PACKAGE_avrdude=m
+# CONFIG_PACKAGE_bandwidthd is not set
+# CONFIG_PACKAGE_bandwidthd-pgsql is not set
 CONFIG_PACKAGE_bash=m
 # CONFIG_PACKAGE_bc is not set
 CONFIG_PACKAGE_bluez-daemon=m
@@ -6320,6 +6339,9 @@ CONFIG_PACKAGE_robocfg=m
 # CONFIG_PACKAGE_rrdcgi1 is not set
 # CONFIG_PACKAGE_rrdtool1 is not set
 # CONFIG_PACKAGE_rtl-sdr is not set
+# CONFIG_PACKAGE_sane-backends is not set
+# CONFIG_PACKAGE_sane-daemon is not set
+# CONFIG_PACKAGE_sane-frontends is not set
 CONFIG_PACKAGE_screen=m
 # CONFIG_PACKAGE_serialconsole is not set
 CONFIG_PACKAGE_shadow=m
@@ -6382,6 +6404,7 @@ CONFIG_PACKAGE_whereis=m
 CONFIG_PACKAGE_wifitoggle=m
 CONFIG_PACKAGE_xsltproc=m
 CONFIG_PACKAGE_xxd=m
+# CONFIG_PACKAGE_yanglint is not set
 # CONFIG_PACKAGE_yunbridge is not set
 # CONFIG_PACKAGE_zsh is not set
 
