--- a/.config
+++ b/.config
@@ -3750,7 +3750,7 @@ CONFIG_PACKAGE_libffi=y
 CONFIG_PACKAGE_libffmpeg-full=m
 # CONFIG_PACKAGE_libffmpeg-mini is not set
 CONFIG_PACKAGE_libflac=m
-CONFIG_PACKAGE_libfreecwmp=m
+# CONFIG_PACKAGE_libfreecwmp is not set
 CONFIG_PACKAGE_libfreetype=y
 CONFIG_PACKAGE_libftdi=y
 CONFIG_PACKAGE_libftdi1=y
@@ -3788,7 +3788,7 @@ CONFIG_PACKAGE_libmad=m
 CONFIG_PACKAGE_libmagic=m
 CONFIG_PACKAGE_libmcrypt=m
 # CONFIG_PACKAGE_libmicrohttpd is not set
-CONFIG_PACKAGE_libmicroxml=m
+# CONFIG_PACKAGE_libmicroxml is not set
 CONFIG_PACKAGE_libminiupnpc=m
 CONFIG_PACKAGE_libmms=m
 CONFIG_PACKAGE_libmnl=m
@@ -5180,7 +5180,7 @@ CONFIG_PACKAGE_p910nd=m
 #
 # CONFIG_PACKAGE_babel-pinger is not set
 CONFIG_PACKAGE_babeld=m
-CONFIG_PACKAGE_batmand=m
+# CONFIG_PACKAGE_batmand is not set
 # CONFIG_PACKAGE_bcp38 is not set
 CONFIG_PACKAGE_bird4=m
 # CONFIG_PACKAGE_bird4-uci is not set
