--- a/.config
+++ b/.config
@@ -3910,7 +3910,7 @@ CONFIG_PACKAGE_libustream-polarssl=m
 CONFIG_PACKAGE_libuuid=y
 CONFIG_PACKAGE_libuv=m
 CONFIG_PACKAGE_libuvc=m
-# CONFIG_PACKAGE_libv4l is not set
+CONFIG_PACKAGE_libv4l=m
 CONFIG_PACKAGE_libvorbis=m
 CONFIG_PACKAGE_libvorbisidec=m
 # CONFIG_PACKAGE_libvpx is not set
@@ -4023,7 +4023,7 @@ CONFIG_PACKAGE_luci-app-hd-idle=m
 CONFIG_PACKAGE_luci-app-lxc=m
 CONFIG_PACKAGE_luci-app-meshwizard=m
 # CONFIG_PACKAGE_luci-app-minidlna is not set
-# CONFIG_PACKAGE_luci-app-mjpg-streamer is not set
+CONFIG_PACKAGE_luci-app-mjpg-streamer=m
 # CONFIG_PACKAGE_luci-app-mmc-over-gpio is not set
 CONFIG_PACKAGE_luci-app-multiwan=m
 # CONFIG_PACKAGE_luci-app-mwan3 is not set
@@ -4880,8 +4880,15 @@ CONFIG_PACKAGE_imagemagick-jpeg=m
 CONFIG_PACKAGE_imagemagick-png=m
 CONFIG_PACKAGE_imagemagick-tiff=m
 CONFIG_PACKAGE_imagemagick-tools=m
-# CONFIG_PACKAGE_minidlna is not set
-# CONFIG_PACKAGE_mjpg-streamer is not set
+CONFIG_PACKAGE_minidlna=m
+CONFIG_PACKAGE_mjpg-streamer=m
+CONFIG_MJPG_STREAMER_V4L2=y
+CONFIG_MJPG_STREAMER_INPUT_FILE=y
+CONFIG_MJPG_STREAMER_INPUT_UVC=y
+CONFIG_MJPG_STREAMER_INPUT_TESTPICTURE=y
+CONFIG_MJPG_STREAMER_OUTPUT_FILE=y
+CONFIG_MJPG_STREAMER_OUTPUT_HTTP=y
+CONFIG_MJPG_STREAMER_WWW=y
 CONFIG_PACKAGE_motion=m
 CONFIG_PACKAGE_png2mono=m
 CONFIG_PACKAGE_vips=m
