--- a/.config
+++ b/.config
@@ -486,6 +486,7 @@ CONFIG_FEATURE_drawing-backend_libX11=y
 #
 CONFIG_PACKAGE_base-files=y
 CONFIG_PACKAGE_block-mount=y
+# CONFIG_PACKAGE_bridge is not set
 CONFIG_PACKAGE_busybox=y
 CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_BUSYBOX_DEFAULT_HAVE_DOT_CONFIG=y
@@ -2357,6 +2358,10 @@ CONFIG_PACKAGE_valgrind-massif=m
 CONFIG_PACKAGE_valgrind-vgdb=m
 
 #
+# Extra packages
+#
+
+#
 # Firmware
 #
 # CONFIG_PACKAGE_r8169-firmware is not set
@@ -3054,6 +3059,7 @@ CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_lua-base64=y
 CONFIG_PACKAGE_lua-bencode=m
+# CONFIG_PACKAGE_lua-cjson is not set
 CONFIG_PACKAGE_lua-copas=m
 CONFIG_PACKAGE_lua-coxpcall=y
 CONFIG_PACKAGE_lua-examples=m
@@ -3740,7 +3746,7 @@ CONFIG_PACKAGE_libdw=m
 # CONFIG_PACKAGE_libev is not set
 CONFIG_PACKAGE_libevent=m
 CONFIG_PACKAGE_libevent2=m
-# CONFIG_PACKAGE_libevent2-core is not set
+CONFIG_PACKAGE_libevent2-core=m
 # CONFIG_PACKAGE_libevent2-extra is not set
 CONFIG_PACKAGE_libevent2-openssl=m
 # CONFIG_PACKAGE_libevent2-pthreads is not set
@@ -3868,6 +3874,7 @@ CONFIG_PACKAGE_librrd1=m
 # CONFIG_PACKAGE_librtlsdr is not set
 CONFIG_PACKAGE_libruby=m
 CONFIG_PACKAGE_libsamplerate=m
+# CONFIG_PACKAGE_libsane is not set
 CONFIG_PACKAGE_libsasl2=m
 # CONFIG_PACKAGE_libsearpc is not set
 # CONFIG_PACKAGE_libseccomp is not set
@@ -5218,7 +5225,7 @@ CONFIG_PACKAGE_p910nd=m
 #
 # CONFIG_PACKAGE_babel-pinger is not set
 CONFIG_PACKAGE_babeld=m
-CONFIG_PACKAGE_batmand=m
+# CONFIG_PACKAGE_batmand is not set
 # CONFIG_PACKAGE_bcp38 is not set
 CONFIG_PACKAGE_bird4=m
 # CONFIG_PACKAGE_bird4-uci is not set
@@ -5229,6 +5236,7 @@ CONFIG_PACKAGE_birdc6=m
 # CONFIG_PACKAGE_birdcl4 is not set
 # CONFIG_PACKAGE_birdcl6 is not set
 # CONFIG_PACKAGE_bmx6 is not set
+# CONFIG_PACKAGE_bmx7 is not set
 # CONFIG_PACKAGE_cjdns is not set
 CONFIG_PACKAGE_genl=m
 CONFIG_PACKAGE_igmpproxy=m
@@ -5722,6 +5730,7 @@ CONFIG_PACKAGE_memcached=m
 # CONFIG_PACKAGE_minimalist-pcproxy is not set
 CONFIG_PACKAGE_mosquitto=m
 CONFIG_MOSQUITTO_LWS=y
+CONFIG_MOSQUITTO_PASSWD=y
 CONFIG_PACKAGE_mosquitto-client=m
 # CONFIG_PACKAGE_mosquitto-client-nossl is not set
 # CONFIG_PACKAGE_mosquitto-nossl is not set
@@ -5967,6 +5976,8 @@ CONFIG_PACKAGE_wall=m
 # database
 #
 CONFIG_PACKAGE_mysql-server=m
+# CONFIG_PACKAGE_pgsql-cli is not set
+# CONFIG_PACKAGE_pgsql-server is not set
 CONFIG_PACKAGE_sqlite3-cli=m
 CONFIG_PACKAGE_unixodbc-tools=m
 
@@ -6376,6 +6387,9 @@ CONFIG_PACKAGE_robocfg=m
 # CONFIG_PACKAGE_rrdcgi1 is not set
 # CONFIG_PACKAGE_rrdtool1 is not set
 # CONFIG_PACKAGE_rtl-sdr is not set
+# CONFIG_PACKAGE_sane-backends is not set
+# CONFIG_PACKAGE_sane-daemon is not set
+# CONFIG_PACKAGE_sane-frontends is not set
 CONFIG_PACKAGE_screen=m
 # CONFIG_PACKAGE_serialconsole is not set
 CONFIG_PACKAGE_shadow=m
