--- a/.config
+++ b/.config
@@ -5611,6 +5611,7 @@ CONFIG_PACKAGE_kismet-server=m
 CONFIG_PACKAGE_6in4=m
 CONFIG_PACKAGE_6rd=m
 CONFIG_PACKAGE_6to4=m
+CONFIG_PACKAGE_adblock=m
 CONFIG_PACKAGE_ahcpd=m
 # CONFIG_PACKAGE_aiccu is not set
 CONFIG_PACKAGE_ajtcl=m
