--- a/.config
+++ b/.config
@@ -3166,7 +3166,54 @@ CONFIG_PACKAGE_octave-data=m
 #
 # PHP
 #
-# CONFIG_PACKAGE_php5 is not set
+CONFIG_PACKAGE_php5=m
+CONFIG_PHP5_FILTER=y
+CONFIG_PHP5_LIBXML=y
+CONFIG_PHP5_SYSTEMTZDATA=y
+CONFIG_PACKAGE_php5-cgi=m
+CONFIG_PACKAGE_php5-cli=m
+CONFIG_PACKAGE_php5-fastcgi=m
+CONFIG_PACKAGE_php5-fpm=m
+CONFIG_PACKAGE_php5-mod-calendar=m
+CONFIG_PACKAGE_php5-mod-ctype=m
+CONFIG_PACKAGE_php5-mod-curl=m
+CONFIG_PACKAGE_php5-mod-dom=m
+CONFIG_PACKAGE_php5-mod-exif=m
+CONFIG_PACKAGE_php5-mod-fileinfo=m
+CONFIG_PACKAGE_php5-mod-ftp=m
+CONFIG_PACKAGE_php5-mod-gd=m
+CONFIG_PACKAGE_php5-mod-gettext=m
+CONFIG_PACKAGE_php5-mod-gmp=m
+CONFIG_PACKAGE_php5-mod-hash=m
+CONFIG_PACKAGE_php5-mod-iconv=m
+CONFIG_PACKAGE_php5-mod-json=m
+CONFIG_PACKAGE_php5-mod-ldap=m
+CONFIG_PACKAGE_php5-mod-mbstring=m
+CONFIG_PACKAGE_php5-mod-mcrypt=m
+CONFIG_PACKAGE_php5-mod-mysql=m
+CONFIG_PACKAGE_php5-mod-mysqli=m
+CONFIG_PACKAGE_php5-mod-opcache=m
+CONFIG_PACKAGE_php5-mod-openssl=m
+CONFIG_PACKAGE_php5-mod-pcntl=m
+CONFIG_PACKAGE_php5-mod-pdo=m
+CONFIG_PACKAGE_php5-mod-pdo-mysql=m
+CONFIG_PACKAGE_php5-mod-pdo-pgsql=m
+CONFIG_PACKAGE_php5-mod-pdo-sqlite=m
+CONFIG_PACKAGE_php5-mod-pgsql=m
+CONFIG_PACKAGE_php5-mod-session=m
+CONFIG_PACKAGE_php5-mod-shmop=m
+CONFIG_PACKAGE_php5-mod-simplexml=m
+CONFIG_PACKAGE_php5-mod-soap=m
+CONFIG_PACKAGE_php5-mod-sockets=m
+CONFIG_PACKAGE_php5-mod-sqlite3=m
+CONFIG_PACKAGE_php5-mod-sysvmsg=m
+CONFIG_PACKAGE_php5-mod-sysvsem=m
+CONFIG_PACKAGE_php5-mod-sysvshm=m
+CONFIG_PACKAGE_php5-mod-tokenizer=m
+CONFIG_PACKAGE_php5-mod-xml=m
+CONFIG_PACKAGE_php5-mod-xmlreader=m
+CONFIG_PACKAGE_php5-mod-xmlwriter=m
+CONFIG_PACKAGE_php5-mod-zip=m
 
 #
 # Perl
@@ -5170,6 +5217,8 @@ CONFIG_PACKAGE_bind-server=m
 CONFIG_PACKAGE_bind-tools=m
 CONFIG_PACKAGE_ddns-scripts=m
 # CONFIG_PACKAGE_ddns-scripts_cloudflare is not set
+# CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4 is not set
+# CONFIG_PACKAGE_ddns-scripts_godaddy.com-v1 is not set
 # CONFIG_PACKAGE_ddns-scripts_no-ip_com is not set
 # CONFIG_PACKAGE_ddns-scripts_nsupdate is not set
 # CONFIG_PACKAGE_dnscrypt-proxy is not set
@@ -5325,6 +5374,7 @@ CONFIG_PACKAGE_olsrd-mod-nameservice=m
 # CONFIG_PACKAGE_olsrd-mod-sgwdynspeed is not set
 CONFIG_PACKAGE_olsrd-mod-txtinfo=m
 CONFIG_PACKAGE_olsrd-mod-watchdog=m
+# CONFIG_PACKAGE_prince is not set
 # CONFIG_PACKAGE_quagga is not set
 CONFIG_PACKAGE_relayd=m
 CONFIG_PACKAGE_smcroute=m
@@ -5805,6 +5855,7 @@ CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
 CONFIG_PACKAGE_ser2net=m
 CONFIG_PACKAGE_shellinabox=y
 # CONFIG_PACKAGE_smartsnmpd is not set
+# CONFIG_PACKAGE_snmp-mibs is not set
 CONFIG_PACKAGE_snmp-utils=m
 CONFIG_PACKAGE_snmpd=m
 # CONFIG_PACKAGE_snmpd-static is not set
